find_best_block_sizes.cpp will correctly find the preferred block size in a matrix, filtering out the highest number of zeroes

--- a/programs/Makefile
+++ b/programs/Makefile
@@ -1,14 +1,36 @@
-all: test_sparse_conversion.o
+CXX = g++
+CXXFLAGS = -g -fopenmp -std=c++17
+LDFLAGS = -Llibtorch/lib -Wl,-rpath,libtorch/lib
+INCLUDES = -Ilibtorch/include -Ilibtorch/include/torch/csrc/api/include
+LIBS = -ltorch -ltorch_cpu -lc10
 
-docTests.o: docTests.cc
-	g++ -std=c++17 docTests.cc -Ilibtorch/include -Ilibtorch/include/torch/csrc/api/include -Llibtorch/lib -Wl,-rpath,libtorch/lib -ltorch -ltorch_cpu -lc10 -o docTests.o
-test.o: test.cc
-	g++ -std=c++17 test.cc -Ilibtorch/include -Ilibtorch/include/torch/csrc/api/include -Llibtorch/lib -Wl,-rpath,libtorch/lib -ltorch -ltorch_cpu -lc10 -o test.o
-classes.o: classes.cc
-	g++ -g -Wall classes.cc -o classes.o
-COO.o: COO.cc
-	g++ -g -Wall -fopenmp COO.cc -o COO.o
-test_sparse_conversion.o: test_sparse_conversion.cpp
-	g++ -g -fopenmp -std=c++17 test_sparse_conversion.cpp -Ilibtorch/include -Ilibtorch/include/torch/csrc/api/include -Llibtorch/lib -Wl,-rpath,libtorch/lib -ltorch -ltorch_cpu -lc10 -o test_sparse_conversion.o
+LIBTORCH = $(INCLUDES) $(LDFLAGS) $(LIBS)
+HEADERS = myHeaders.hpp
+
+TARGETS = test_sparse_conversion.out test_count_zero_blocks.out docTests.out test.out classes.out COO.out find_best_block_size.out
+
+all: $(TARGETS)
+
+find_best_block_size.out: find_best_block_size.cpp $(HEADERS)
+	$(CXX) $(CXXFLAGS) find_best_block_size.cpp $(LIBTORCH) -o $@
+
+test_sparse_conversion.out: test_sparse_conversion.cpp $(HEADERS)
+	$(CXX) $(CXXFLAGS) test_sparse_conversion.cpp $(LIBTORCH) -o $@
+
+test_count_zero_blocks.out: test_count_zero_blocks.cpp $(HEADERS)
+	$(CXX) $(CXXFLAGS) test_count_zero_blocks.cpp $(LIBTORCH) -o $@
+
+docTests.out: docTests.cc $(HEADERS)
+	$(CXX) -std=c++17 docTests.cc $(LIBTORCH) -o $@
+
+test.out: test.cc $(HEADERS)
+	$(CXX) -std=c++17 test.cc $(LIBTORCH) -o $@
+
+classes.out: classes.cc $(HEADERS)
+	$(CXX) -g -Wall classes.cc -o $@
+
+COO.out: COO.cc $(HEADERS)
+	$(CXX) -g -Wall -fopenmp COO.cc -o $@
+
 clean:
-	rm -rf *.o
+	rm -f $(TARGETS)
