Iterative solution to computeZeroBlocks, is a little bit quicker. Changed the Makefile to include some optimization flags, and modified again some functions in the header file

--- a/programs/Makefile
+++ b/programs/Makefile
@@ -1,5 +1,6 @@
 CXX = g++
-CXXFLAGS = -g -fopenmp -std=c++17
+# CXXFLAGS = -g -fopenmp -std=c++17
+CXXFLAGS = -O3 -march=core2 -mavx2 -mfma -fopenmp -std=c++17
 LDFLAGS = -Llibtorch/lib -Wl,-rpath,libtorch/lib
 INCLUDES = -Ilibtorch/include -Ilibtorch/include/torch/csrc/api/include
 LIBS = -ltorch -ltorch_cpu -lc10
