Trying to get conversion and multiplication wrappers to work

--- a/spmm_blockedell_copy/Makefile
+++ b/spmm_blockedell_copy/Makefile
@@ -5,7 +5,7 @@ CXX = g++
 NVCC = nvcc
 HEADERS = myHeaders.cuh
 NVCCFLAGS = -O0 -std=c++17 -Wno-deprecated-gpu-targets $(INCLUDES)
-LDFLAGS = -Llibtorch/lib -Wl,-rpath,libtorch/lib
+LDFLAGS = -Llibtorch/lib #-Wl,-rpath,libtorch/lib
 INCLUDES = -Ilibtorch/include -Ilibtorch/include/torch/csrc/api/include
 LIBS = -ltorch -ltorch_cpu -lc10
 LIBTORCH = $(INCLUDES) $(LDFLAGS) $(LIBS)
